[gd_scene load_steps=2 format=3 uid="uid://cqw4x7nxjwmxy"]

[ext_resource type="Script" path="res://scripts/GameEndWindow.gd" id="1_5xvwq"]

[node name="GameEndWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 1.0
script = ExtResource("1_5xvwq")

[node name="WindowPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
self_modulate = Color(1, 1, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="WindowPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="WindowPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Game Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="WindowPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="WindowPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersContainer" type="VBoxContainer" parent="WindowPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

 